--- a/other.htm
+++ b/other.htm
@@ -295,44 +295,9 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;- Seminar Lille Economie Management, March 14,
-2023<br>
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;-&nbsp;</span><span
- style="font-size: 11pt; font-family: &quot;Calibri&quot;,sans-serif;">Club
-Statistiques et
-Math&eacute;matiques Appliqu&eacute;es &agrave; la Canc&eacute;rologie
-du Canc&eacute;ropole Grand Sud-Ouest </span><span
- style="font-family: Calibri;">, March 17,
-2023<br>
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;- Nothwestern
-University, </span><span style="font-family: Calibri;">Strategy
-Seminar, Kellogg, </span><span style="font-family: Calibri;">March 29,
-2023</span><span style="font-family: Calibri;"><br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;-&nbsp;University of Wisconsin, Madison, April
-5,
-2023<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; - IIOC, Keynote lecture,&nbsp;Washington DC, April
-22, 2023<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; - IIOC, Washington DC, April 23, 2023<br>
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp; - Roundtable on
+Pharmaceutical Innovation, Common Good Summit, Toulouse, June 2, 2023<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - IESE Business School,
 Barcelona, June 12-13, 2023 <br>
@@ -342,6 +307,8 @@ Barcelona, June 12-13, 2023 <br>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Journ&eacute;es de l'Economie, Lyon,
 November 2023<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- Helsinki, 3-4
+novembre 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
@@ -350,8 +317,62 @@ November 2023<br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;"> </span><span
+ style="font-family: Calibri;">&nbsp;</span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; - IIOC, Washington DC, April 23, 2023<br>
+</span><span style="font-family: Calibri;">&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp;
+&nbsp;&nbsp;</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; - IIOC, Keynote lecture,&nbsp;Washington DC, April
+22, 2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp; &nbsp;- &nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;- University of Wisconsin, Madison,
+April
+5,
+2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -
+Nothwestern
+University, </span><span style="font-family: Calibri;">Strategy
+Seminar, Kellogg, </span><span style="font-family: Calibri;">March 29,
+2023</span><span style="font-family: Calibri;"><br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; -&nbsp;</span><span
+ style="font-size: 11pt; font-family: &quot;Calibri&quot;,sans-serif;">Club
+Statistiques et
+Math&eacute;matiques Appliqu&eacute;es &agrave; la Canc&eacute;rologie
+du Canc&eacute;ropole Grand Sud-Ouest </span><span
+ style="font-family: Calibri;">, March 17,
+2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp;- Florida State University, March 1,
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;- Seminar Lille Economie
+Management, March 14,
+2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;- Florida State University, March 1,
 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
