--- a/other.htm
+++ b/other.htm
@@ -307,9 +307,9 @@ Barcelona, June 12-13, 2023 <br>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Journ&eacute;es de l'Economie, Lyon,
 November 2023<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- VATT Institue for
-Economic Research, Helsinki, N</span><span style="font-family: Calibri;">ovember
-</span><span style="font-family: Calibri;">3-4&nbsp; 2023<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- VATT Institute for
+Economic Research, Helsinki, N</span><span style="font-family: Calibri;">ovember&nbsp;</span><span
+ style="font-family: Calibri;">4, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
