--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -93,7 +93,7 @@ Ligon, CEPR DP 7574<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 <br>
-&nbsp;&nbsp;&nbsp; "</span><a href="CEPR-DP6004" target="_blank">Heterogeneity
+&nbsp;&nbsp;&nbsp; "</span><a href="CEPR-DP6004.pdf" target="_blank">Heterogeneity
 of Preferences, Limited Commitment and Coalitions: Empirical Evidence
 on the Limits to Risk Sharing in Rural Pakistan</a><span
  style="font-family: Calibri;">" CEPR DP 6004<br>
