--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -38,8 +38,24 @@ with Paul-Henri Moisson and Jean Tirole<br>
 </span></span>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
- style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.<span
- style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.</span></span><span
+ style="font-family: Calibri;"> &nbsp; </span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;"><span lang="EN-US">"<a
+ href="DMT%20cooperatives%202023%2006_website.pdf" target="_blank">The
+(Ir)Relevance of the Cooperative Form</a>"
+with Paul-Henri Moisson and Jean Tirole<br>
+</span></span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;"><span lang="EN-US"></span></span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp; &nbsp;</span></span><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style=""><span
+ style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><span style="font-family: &quot;Calibri&quot;,sans-serif;"
  lang="EN-US">"<a href="merger_advertising_Nov2022.pdf" target="_blank">Mergers
 and Advertising in the
