--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -40,7 +40,7 @@ with Paul-Henri Moisson and Jean Tirole<br>
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.</span></span><span
  style="font-family: Calibri;"> &nbsp; </span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; </span><span
  style="font-family: Calibri;"><span lang="EN-US">"<a
  href="DMT%20cooperatives%202023%2006_website.pdf" target="_blank">The
 (Ir)Relevance of the Cooperative Form</a>"
