--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -44,7 +44,10 @@ with Paul-Henri Moisson and Jean Tirole<br>
  style="font-family: Calibri;"><span lang="EN-US">"<a
  href="DMT%20cooperatives%202023%2006_website.pdf" target="_blank">The
 (Ir)Relevance of the Cooperative Form</a>"
-with Paul-Henri Moisson and Jean Tirole<br>
+with Paul-Henri Moisson and Jean Tirole</span></span></p>
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
+ style="font-family: Calibri;"><span lang="EN-US"><br>
 </span></span></p>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
