--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -51,9 +51,6 @@ with Paul-Henri Moisson and Jean Tirole</span></span></p>
 </span></span></p>
 <p class="MsoNormal"
  style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
- style="font-family: Calibri;"><span lang="EN-US"></span></span></p>
-<p class="MsoNormal"
- style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
  style="font-family: Calibri;"><span lang="EN-US">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp; &nbsp;</span></span><span
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style=""><span
@@ -65,8 +62,16 @@ and Advertising in the
 Pharmaceutical Industry</a>", with Gosia Majewska<o:p></o:p></span></p>
 <span style="font-family: Calibri;"><span lang="EN-US"></span></span><span
  style="font-family: Calibri;"><br>
-</span><span style="font-family: Calibri;"><span lang="EN-US">
-&nbsp;&nbsp;&nbsp; "<a href="DGV.pdf" target="_blank">Bargaining and
+</span><span style="font-family: Calibri;">&nbsp;&nbsp; &nbsp; "<a
+ href="Dubois_Gokkoca_AntibioticDemandinthePresenceofAntimicrobialResistance.pdf"
+ target="_blank">Antibiotic Demand in the Presence of
+Antimicrobial
+Resistance</a>", with G&ouml;k&ccedil;e G&ouml;kkoca</span><span
+ style="font-family: Calibri;"><span lang="EN-US">
+&nbsp;&nbsp; <br>
+<br>
+&nbsp;&nbsp;&nbsp; &nbsp;"<a href="DGV.pdf" target="_blank">Bargaining
+and
 International
 Reference Pricing in the Pharmaceutical Industry</a>"
 with Ashvin
@@ -142,9 +147,11 @@ A Cross-Country
 Analysis of Supplemental
 Drug Approvals" with Elissa Philipp-Gentry and Tuba Tun&ccedil;el<br>
 <br>
-&nbsp;&nbsp; &nbsp; "Antibiotic Demand in the Presence of
+&nbsp;&nbsp; &nbsp; "<a
+ href="Dubois_Gokkoca_AntibioticDemandinthePresenceofAntimicrobialResistance.pdf"
+ target="_blank">Antibiotic Demand in the Presence of
 Antimicrobial
-Resistance", with G&ouml;k&ccedil;e G&ouml;kkoca<br>
+Resistance</a>", with G&ouml;k&ccedil;e G&ouml;kkoca<br>
 </span></p>
 <p
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><span
