--- a/other.htm
+++ b/other.htm
@@ -249,7 +249,7 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - MaCCI-EPoS WORKSHOP
+&nbsp;&nbsp;&nbsp; &nbsp; - MaCCI-EPoS Workshop
 &ldquo;Frontiers in Empirical Industrial Organization&rdquo;, </span><span
  style="font-family: Calibri;">August 31, 2023 </span><br>
 <span style="font-family: Calibri;">
