--- a/other.htm
+++ b/other.htm
@@ -248,12 +248,9 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; - MaCCI-EPoS Workshop
-&ldquo;Frontiers in Empirical Industrial Organization&rdquo;, </span><span
- style="font-family: Calibri;">August 31, 2023 </span><br>
-<span style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- VATT Institute for
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;- VATT Institute for
 Economic Research, Seminar, Helsinki, October 3</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">, 2023<br>
@@ -286,9 +283,14 @@ seminar, April 17, 2024<br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
- style="font-family: Calibri;"> </span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; - MaCCI-EPoS Workshop
+&ldquo;Frontiers in Empirical Industrial Organization&rdquo;, </span><span
+ style="font-family: Calibri;">August 31, 2023 </span><br>
+<span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
-&nbsp; - IESE Business School,
+&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;- IESE Business
+School,
 Barcelona, June 12-13, 2023 <br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
