--- a/Publications.htm
+++ b/Publications.htm
@@ -578,8 +578,22 @@ publications:</i></p>
 <ol style="color: rgb(0, 0, 0); font-family: Calibri;" start="30">
   <small> </small>
 </ol>
-<span style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; "</span><a
+<p class="MsoNormal"
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
+ style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.<span
+ style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span></span></span><!--[endif]--><span lang="EN-US">&ldquo;<a
+ href="https://watermark.silverchair.com/jvad045.pdf?token=AQECAHi208BE49Ooan9kkhW_Ercy7Dm3ZL_9Cf3qfKAc485ysgAAA2gwggNkBgkqhkiG9w0BBwagggNVMIIDUQIBADCCA0oGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMY6P5Q7Ejub8YBMAyAgEQgIIDG60W_OZl_pb7fxSXEaeDcrayC3r_f29nwVJkd8nxOGgOWtPoKgWRnFL-6q8eh7pGVD_AXIHernSJnWEOioHQBaNni3IMWkyg6LWk7ZLfUF_T71dFTmdgwUOqcWJLET26MMk9xPFNEUjGPhVvwhHQcNTNhd_Z8uV0M-QocUBADzR8FwKop8Whzl7mg6J0FB8_lqjPaSFB9Ov4tHzcZH6ZpgaKVq-aYF9W37QJxl--QChj9KPk-aol5HgqeeIhzZc8y5LG1bKQlgY7CdF_TcaI5100gPwaen6sO65toj4pRSv33Z0z17cB4t5Gd-Kr7NOEzRQ6G8kv4TCbzGjaFr1vECVPdZBFUdMiu-Bs7581-U07rnTmrLTRGwpyxL7DS2nC610ujgonBrlCXew-QmtzLt9MgqSq_XNihT-t5fUbPq-OUVrUaHHBqGIR2ixnzyf2c7YjR5DZKb76OXn8xrmqRAChA71aezt47x-oFSteuawihh_IincRW7Z4AoB1yqkx2LdxyYlePtENNoFtjyInUsZjd1bRHi_Nh07Lh_V1gx8O2btuyRwF-Vl1TE4D0w_PnQFCOdK8VGoivKs0O1U4XTUabCPUPD8lU9ZhOY2FZHNewYxy4G7PS6NKE_NCXu5lBHkp9zEWLI-vI1ffsyFKXlT5aT7VJ0nSTuoOENZI5jgh4WYvK_gC93N8GiLN3VHLmySo1RpdIaCHMszLQQKQeDMoqiLcjvR4NiaQJFC-WZwUGONTyhUx1JSfQCEcuhZq689iVuQ3NPbRcSRAAFquDRqJrwsyRJQzHe1MeOGutHBZfjRIRwO2Z_br6SufcCkaIF070jWqk4UC5BSFPWfJIBci5Gu8i6a39Rt4VgKxOIhRYvLmXt4gMcJuldGRNcxACO8O3giPA4PCwsvxoTbevXXV6dSRBps-x6uCSrJoMjRupl7YL5Wb8fzj7f5KlnzBWck8OFCKr5_Trw__ZrPBMb5DLP31AUxWPn62s6_-B-EV9g22JYYRsMcxQtqf1IiTVB86MmrdGtYtFvHCC9phVBM7Fn0R4tl3kmxNHQ">Reflecting
+on the First 20
+years of the Journal of the European Economic Association</a>&rdquo;,
+with Jonas Hjort, Guido
+Lorenzoni, Nicola Pavoni, Giovanni Peri, Vasiliki Skreta, Romain
+Wacziarg, Andrea
+Weber, <b><i>Journal of the European Economic Association </i></b>2023
+0(0):1-33</span><span style="font-family: &quot;Calibri&quot;,sans-serif;"
+ lang="EN-US"><o:p></o:p></span></p>
+<br>
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "</span><a
  style="text-decoration: none; font-family: Calibri;"
  href="http://www.google.fr/url?sa=t&amp;rct=j&amp;q=how%20does%20innovation%20in%20the%20pharmaceutical%20industry%20respond%20dubois&amp;source=web&amp;cd=1&amp;ved=0CDUQFjAA&amp;url=http%3A%2F%2Fflash-it.eu%2Fpublications%2Fdoc_download%2F414-how-does-innovation-in-the-pharmaceutical-industry-respond-to-policies-that-influence-expected-marke&amp;ei=LxyzUaf9A4KN0AW9n4C4CA&amp;usg=AFQjCNF5XhyH3AUfU_dok-KXAHNe0TmFKA"
  target="_blank"><span style="color: rgb(0, 0, 0);">How
