--- a/other.htm
+++ b/other.htm
@@ -250,7 +250,8 @@ Conferences</a></h3>
 :</p>
 <span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;- VATT Institute for
+&nbsp; - CEPR virtual roundtable of Journal Editors, September 15, 2023<br>
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;- VATT Institute for
 Economic Research, Seminar, Helsinki, October 3</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">, 2023<br>
@@ -266,7 +267,7 @@ Maryland, IO seminar, November 28, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Journ&eacute;es de l'Economie, Lyon,
-November 2023<br>
+November 16, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp; - CREST Paris, IO seminar,
