--- a/other.htm
+++ b/other.htm
@@ -77,6 +77,8 @@ with Jean Tirole of the 2nd CEPR Health Economics Conference, Toulouse
 School
 of Economics, June 19-20, 2024</p>
   </li>
+  <li>Organization of the Industrial Orgnization segment of the CEPR
+Symposium, Paris, December 11, 2023</li>
   <li>Organization with Helena Perrone&nbsp;of DFG-ANR-ORA Workshop
 Empirical IO of Retail, Food, and Nutrition, University of Mannheim,
 August 30, 2023</li>
@@ -248,10 +250,8 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp; - CEPR virtual roundtable of Journal Editors, September 15, 2023<br>
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;- VATT Institute for
+<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+&nbsp;&nbsp;- VATT Institute for
 Economic Research, Seminar, Helsinki, October 3</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">, 2023<br>
@@ -262,14 +262,17 @@ Economic Research, Keynote, Helsinki, October</span><span
  style="font-family: Calibri;">4, 2023<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; - Harvard Business School,
 November 1, 2023<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - University of
-Maryland, IO seminar, November 28, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Journ&eacute;es de l'Economie, Lyon,
 November 16, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - University of
+Maryland, IO seminar, November 28, 2023<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;
 &nbsp; - CREST Paris, IO seminar,
 March 27, 2024<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
@@ -277,6 +280,9 @@ March 27, 2024<br>
 <span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - LUISS Roma, Department
 seminar, April 17, 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
+-Keynote,&nbsp;Journ&eacute;es Internationales du Risque, Niort, France
+2024<br>
 </span><span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
@@ -284,8 +290,13 @@ seminar, April 17, 2024<br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; - MaCCI-EPoS Workshop
+ style="font-family: Calibri;">&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp; - CEPR virtual roundtable of Journal Editors, September 15, 2023<br>
+</span><span style="font-family: Calibri;">&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp; - MaCCI-EPoS Workshop
 &ldquo;Frontiers in Empirical Industrial Organization&rdquo;, </span><span
  style="font-family: Calibri;">August 31, 2023 </span><br>
 <span style="font-family: Calibri;"></span><span
@@ -1611,55 +1622,63 @@ placement: post
 doc, European University Institute, Florence now at Queen Mary
 University of London, School of Economics and Finance&nbsp;</li>
   <li><a href="mailto:daisyqiuj@hotmail.com" target="_blank">Qiu
-Ju</a>,&nbsp;Essays on Household
-Consumption Behavior and Risk Sharing in Developing Countries,
+Ju</a>,&nbsp;<span style="font-style: italic;">Essays on Household
+Consumption Behavior and Risk Sharing in Developing Countries</span>,
 defended on December 9, 2014, first
 placement: post doc University of Sussex</li>
   <li><a href="http://www.lauralasio.com/">Laura
-Lasio</a>, Essays in Empirical
+Lasio</a>, <span style="font-style: italic;">Essays in Empirical
 Industrial Organization and Regulation of
-Pharmaceuticals,&nbsp;defended
+Pharmaceuticals</span>,&nbsp;defended
 on December 7 2015, first
 placement: Assistant Professor McGill University, Montr&eacute;al.</li>
   <li><a target="_blank"
  href="https://sites.google.com/view/jorge-florez-acosta/home">Jorge
-Florez</a>, Empirical
-IO of the Food Retailing Industry, (with
+Florez</a>, <span style="font-style: italic;">Empirical
+IO of the Food Retailing Industry</span>, (with
 B. Jullien),&nbsp;defended on July 21 2015, first
 placement: Assistant Professor, Universidade del Rosario, Bogota. </li>
   <li><a target="_blank" href="https://ideas.repec.org/f/pal565.html">Arthur
-Alik-Lagrange</a>, Three Essays on workfare
+Alik-Lagrange</a>, <span style="font-style: italic;">Three Essays on
+workfare
 in Low and Middle-Income
-Economies,&nbsp;defended on December 15 2016, first
+Economies</span>,&nbsp;defended on December 15 2016, first
 placement: Research Economist<span style="font-size: 10pt;" lang="EN-US"></span>,
 World Bank </li>
   <li><a href="https://sites.google.com/site/tubatuncel/">Tuba
-Tun&ccedil;el</a>, Essays in IO
-and Health Economics,&nbsp;(with J.
+Tun&ccedil;el</a>, <span style="font-style: italic;">Essays in IO
+and Health Economics</span>,&nbsp;(with J.
 Hammitt),&nbsp;defended on June 26, 2017, first placement:
 Assistant
 Professor, HEC Montr&eacute;al, now at Florida State University</li>
   <li><a href="https://www.linkedin.com/in/adrian-torchiana-0701548a/">Adrian
-Torchiana</a>, Essays in Applied
+Torchiana</a>, <span style="font-style: italic;">Essays in Applied
 Econometrics with Missing
-Data,&nbsp;defended on October 9, 2017, now Data Scientist,
+Data</span>,&nbsp;defended on October 9, 2017, now Data Scientist,
 Granular,
 San
 Francisco, US</li>
   <li><a href="https://www.linkedin.com/in/habibi/" target="_blank">Rossi
-Abi-Rafeh</a>, Essays in empirical industrial organization of
-advertising and platform markets, defended on September 9, 2022, now at
+Abi-Rafeh</a>, <span style="font-style: italic;">Essays in empirical
+industrial organization of
+advertising and platform markets</span>, defended on September 9, 2022,
+now at
 Deliveroo London</li>
   <li><a href="https://gosia-majewska.github.io/" target="_blank">Gosia
-Majewska</a>, &nbsp;Essays on the Industrial Organization of
-Pharmaceutical Markets, defended on June 23, 2023&nbsp;first placement:
+Majewska</a>, &nbsp;<span style="font-style: italic;">Essays on the
+Industrial Organization of
+Pharmaceutical Markets</span>, defended on June 23, 2023&nbsp;first
+placement:
 Assistant
 Professor, ESSEC Business School Paris</li>
   <li><a href="https://www.gokcegokkoca.com/">Gokce Gokkoca</a>, IO and
 Health</li>
-  <li>L&eacute;a Bignon, IO and Health</li>
-  <li>Xin Zhang, IO</li>
-  <li>Valentina Reig, IO and Health</li>
+  <li><a href="https://www.tse-fr.eu/fr/people/lea-bignon"
+ target="_blank">L&eacute;a Bignon</a>, IO and Health</li>
+  <li><a href="https://www.tse-fr.eu/people/xin-zhang" target="_blank">Xin
+Zhang</a>, IO</li>
+  <li><a href="https://www.tse-fr.eu/fr/people/valentina-reig"
+ target="_blank">Valentina Reig</a>, IO and Health</li>
 </ul>
 <hr style="font-family: Calibri;">
 <p
