--- a/other.htm
+++ b/other.htm
@@ -250,17 +250,9 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-&nbsp;&nbsp;- VATT Institute for
-Economic Research, Seminar, Helsinki, October 3</span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">, 2023<br>
-</span><span style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- VATT Institute for
-Economic Research, Keynote, Helsinki, October</span><span
- style="font-family: Calibri;"> </span><span
- style="font-family: Calibri;">4, 2023<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; - Harvard Business School,
+<span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+&nbsp;&nbsp; - Harvard Business School,
 November 1, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
@@ -280,20 +272,43 @@ March 27, 2024<br>
 <span style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - LUISS Roma, Department
 seminar, April 10, 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - University of Verona,
+May 23 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;
+- Lancaster Univeristy,
+June 6-7 2024<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
--Keynote,&nbsp;Journ&eacute;es Internationales du Risque, Niort, France
-2024<br>
+- Keynote,&nbsp;Journ&eacute;es Internationales du Risque, Niort,
+France
+June 28-29 2024<br>
 </span><span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
- style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><!--[if !supportLists]--><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;</span><span
- style="font-family: Calibri;">&nbsp;&nbsp;</span><span
+ style="margin: 0cm -14.85pt 0.0001pt -1cm; text-align: justify; text-indent: 0cm;"><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp; - CEPR virtual roundtable of Journal Editors, September 15, 2023<br>
+&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;- VATT Institute for
+Economic Research, Keynote VATT Day 2023, Helsinki, October</span><span
+ style="font-family: Calibri;"> </span><span
+ style="font-family: Calibri;">4, 2023<br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+&nbsp; &nbsp;- VATT Institute for
+Economic Research, Seminar, Helsinki, October 3</span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">, 2023</span><span
+ style="font-family: Calibri;"><br>
+</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</span><span
+ style="font-family: Calibri;">
+&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;- CEPR virtual
+roundtable of Journal Editors, September 15, 2023<br>
 </span><span style="font-family: Calibri;">&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp; - MaCCI-EPoS Workshop
