--- a/Workingpapers.htm
+++ b/Workingpapers.htm
@@ -81,7 +81,8 @@ Resistance</a>", with G&ouml;k&ccedil;e G&ouml;kkoca</span><span
 and
 International
 Reference Pricing in the Pharmaceutical Industry</a>"
-with Ashvin
+(<a href="https://youtu.be/MXfLpEwk0xw?si=Za4EVbWK09i6waCr"
+ target="_blank">video</a>) with Ashvin
 Gandhi
 and Shoshana Vasserman <br>
 <br>
