--- a/contact.htm
+++ b/contact.htm
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="en">
 <head>
-<!-- saved from url=(0061)http://www.toulouse.inra.fr/centre/esr/CV/dubois/duboisen.htm -->
   <meta http-equiv="Content-Type"
  content="text/html; charset=windows-1252">
   <meta http-equiv="Content-Language" content="en-us">
@@ -26,9 +25,7 @@
 &nbsp;Professor
 of Economics,&nbsp;<a style="color: rgb(44, 19, 209);" target="_blank"
  href="http://tse-fr.eu/">Toulouse
-School of Economics</a><span style="color: rgb(0, 0, 0);"></span><a
- style="text-decoration: none; color: rgb(0, 0, 0);" target="_blank"
- href="http://www.ut-capitole.fr/"></a>
+School of Economics</a><span style="color: rgb(0, 0, 0);"></span>
 <div><br>
 <span style="font-family: Calibri;">&nbsp;Co-Editor,
 <a style="color: rgb(44, 19, 209);" href="https://academic.oup.com/jeea"
@@ -37,12 +34,12 @@ of the
 European Economic Association</a></span>
 (2021-)</div>
 <div>
-&nbsp;Director <a style="color: rgb(0, 0, 0); text-decoration: none;"
+&nbsp;Director <a style="color: rgb(44, 19, 209);"
  href="https://www.tse-fr.eu/health" target="_blank">TSE
-Health Center</a> (2021-)
+Health Center</a>
+(2021-)
 <font style="color: rgb(0, 0, 0); font-family: Calibri;">&nbsp;<br>
-&nbsp;Senior Member of <a
- style="text-decoration: none; color: rgb(0, 0, 0);" color="rgb(0,0,0)"
+&nbsp;Senior Member of <a style="color: rgb(44, 19, 209);"
  href="https://www.iufrance.fr/" target="_blank">Institut
 Universitaire de France</a>
 (2022-2027)</font></div>
@@ -162,9 +159,7 @@ Toulouse Cedex 06
 </div>
 <div>France</div>
 <font style="font-family: Calibri;"><span
- style="text-decoration: underline;"><span style="font-weight: bold;"></span></span><a
- style="font-weight: bold;" href="https://gosia-majewska.github.io/"
- target="_blank"></a><br>
+ style="text-decoration: underline;"><span style="font-weight: bold;"></span></span><br>
 </font>
 </body>
 </html>
