--- a/other.htm
+++ b/other.htm
@@ -251,14 +251,6 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 <span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Journ&eacute;es de l'Economie, Lyon,
-November 16, 2023<br>
-</span><span style="font-family: Calibri;"></span><span
- style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - University of
-Maryland, IO seminar, November 28, 2023<br>
-</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp; - CREST Paris, IO seminar,
 March 27, 2024<br>
@@ -278,7 +270,7 @@ June 6-7 2024<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
 - Keynote,&nbsp;Journ&eacute;es Internationales du Risque, Niort,
 France,
-June 27 2024<br>
+June 27-28, 2024<br>
 </span><span style="font-family: Calibri;">&nbsp;</span><span
  style="font-family: Calibri;">Past :</span><!--[endif]-->
 <p class="MsoNormal"
@@ -286,8 +278,22 @@ June 27 2024<br>
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;</span><span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+- University of
+Maryland, IO seminar, November 28, 2023<br>
+</span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
-&nbsp;&nbsp; - Harvard Business School,
+&nbsp;&nbsp;</span><span style="font-family: Calibri;">&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;-
+Journ&eacute;es de l'Economie, Lyon,
+November 16, 2023<br>
+</span>&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; <span style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"></span><span
+ style="font-family: Calibri;"> - Harvard Business School,
 November 1, 2023<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
