--- a/other.htm
+++ b/other.htm
@@ -250,7 +250,9 @@ Conferences</a></h3>
  style="line-height: 100%; margin-top: 0pt; margin-bottom: 0pt; font-family: Calibri;"><a
  name="Forthcoming">Forthcoming</a>
 :</p>
-<span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+<span style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;- 8th AMR Conference; Basel, March 6, 2024<br>
+&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp; - CREST Paris, IO seminar,
 March 27, 2024<br>
