--- a/other.htm
+++ b/other.htm
@@ -73,7 +73,9 @@ Conferences</a></h3>
 <ul style="font-family: Calibri;">
   <li>
     <p style="margin: 0pt; line-height: 100%; text-indent: 0pt;">Organization
-with Jean Tirole of the 2nd CEPR Health Economics Conference, Toulouse
+with Jean Tirole of the 2nd&nbsp;<a
+ href="https://www.tse-fr.eu/conferences/2024-2nd-health-economics-conference?lang=en"
+ target="_blank">Health Economics Conference</a>, Toulouse
 School
 of Economics, June 19-20, 2024</p>
   </li>
@@ -251,18 +253,27 @@ Conferences</a></h3>
  name="Forthcoming">Forthcoming</a>
 :</p>
 <span style="font-family: Calibri;">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;- 8th AMR Conference; Basel, March 6, 2024<br>
+&nbsp;&nbsp;&nbsp;- 8th AMR Conference, Basel, March 6, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;- 8th AMR Conference, Basel, March 7, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp; - CREST Paris, IO seminar,
 March 27, 2024<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; - University of Bristol, April 8, 2024</span><br>
 <span style="font-family: Calibri;">
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - LUISS Roma, Department
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Journ&eacute;es
+AntibioDEAL, Paris, April 9, 2024<br>
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - LUISS Roma, Department
 seminar, April 10, 2024<br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - University of Verona,
+</span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp; - University of Verona,
 May 23 2024<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; - Bank of Spain, June 5,
+2024<br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;
 - Lancaster Univeristy,
@@ -538,7 +549,7 @@ March 29, 2022<br>
  style="font-family: Calibri;">&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; - </span><span
  style="font-family: Calibri;">IO
-seminar, Uniersitat Pompeu Fabra, March 23, 2022<br>
+seminar, Universitat Pompeu Fabra, March 23, 2022<br>
 </span><span style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;"></span><span
