--- a/Publications.htm
+++ b/Publications.htm
@@ -44,9 +44,9 @@ Curative Drug
 Expenses: The Case of Hepatitis C in France</a>" with Thierry Magnac</span><span
  style="font-family: Calibri;"></span><span
  style="font-family: Calibri;">, forthcoming at <span
- style="font-style: italic;">Journal of
+ style="font-style: italic; font-weight: bold;">Journal of
 Health</span></span><span
- style="font-style: italic; font-family: Calibri;">
+ style="font-style: italic; font-family: Calibri; font-weight: bold;">
 Economics</span><span style="font-family: Calibri;"><span lang="EN-US"></span></span><br>
 <span style="font-family: Calibri;"><br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
