--- a/Publications.htm
+++ b/Publications.htm
@@ -595,7 +595,7 @@ publications:</i></p>
  style="font-family: &quot;Calibri&quot;,sans-serif;" lang="EN-US"><span style="">1.<span
  style="font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant: normal; font-weight: normal; font-size: 7pt; line-height: normal; font-size-adjust: none; font-stretch: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </span></span></span><!--[endif]--><span lang="EN-US">&ldquo;<a
- style="color: rgb(0, 0, 0);" text-decoration="none"
+ style="color: rgb(0, 0, 0); text-decoration: none;"
  href="https://academic.oup.com/jeea/advance-article/doi/10.1093/jeea/jvad045/7241813?guestAccessKey=d95b7d24-311e-4c6a-970e-2bfa3e53ea05&amp;utm_source=authortollfreelink&amp;utm_campaign=jeea&amp;utm_medium=email">Reflecting
 on the First 20
 years of the Journal of the European Economic Association</a>&rdquo;,
