--- a/Publications.htm
+++ b/Publications.htm
@@ -43,11 +43,13 @@ publications:&nbsp;</i></big></p>
 Curative Drug
 Expenses: The Case of Hepatitis C in France</a>" with Thierry Magnac</span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">, forthcoming at <span
+ style="font-family: Calibri;">,&nbsp;<span
  style="font-style: italic; font-weight: bold;">Journal of
 Health</span></span><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">
-Economics</span><span style="font-family: Calibri;"><span lang="EN-US"></span></span><br>
+Economics</span><span style="font-family: Calibri; font-weight: bold;"></span><span
+ style="font-family: Calibri;">, volume 94, March 2024</span><span
+ style="font-family: Calibri;"><span lang="EN-US"></span></span><br>
 <span style="font-family: Calibri;"><br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
  style="color: rgb(0, 0, 0); text-decoration: none;"
