--- a/contact.htm
+++ b/contact.htm
@@ -99,7 +99,7 @@ of Economics, Northwestern University (2010-2011)
  style="font-family: Calibri;">&nbsp;Managing
 Editor of&nbsp;</span><a
  style="text-decoration: none; color: rgb(0, 0, 0); font-family: Calibri;"
- href="http://www.journals.elsevier.com/international-journal-of-industrial-organization/"
+ href="https://www.sciencedirect.com/journal/international-journal-of-industrial-organization"
  target="_blank">International Journal of Industrial
 Organization</a><span style="font-family: Calibri;">
 (2013-2018)</span></div>
@@ -107,7 +107,7 @@ Organization</a><span style="font-family: Calibri;">
 Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://www.journals.elsevier.com/european-economic-review"
  target="_blank">European Economic Review</a>
-(2012-)</span></div>
+(2012-2023)</span></div>
 <div><span style="font-family: Calibri;">&nbsp;Associate
 Editor of <a style="text-decoration: none; color: rgb(0, 0, 0);"
  href="https://annals.ensae.fr/" target="_blank">Annals
