--- a/Publications.htm
+++ b/Publications.htm
@@ -43,12 +43,16 @@ publications:&nbsp;</i></big></p>
 Curative Drug
 Expenses: The Case of Hepatitis C in France</a>" with Thierry Magnac</span><span
  style="font-family: Calibri;"></span><span
- style="font-family: Calibri;">,&nbsp;<span
- style="font-style: italic; font-weight: bold;">Journal of
-Health</span></span><span
+ style="font-family: Calibri;">,&nbsp;<a
+ href="https://www.sciencedirect.com/science/article/pii/S0167629624000067"
+ target="_blank"><span style="font-style: italic; font-weight: bold;">Journal
+of
+Health</span></a></span><a style="text-decoration: none;"
+ href="https://www.sciencedirect.com/science/article/pii/S0167629624000067"
+ target="_blank"><span
  style="font-style: italic; font-family: Calibri; font-weight: bold;">
 Economics</span><span style="font-family: Calibri; font-weight: bold;"></span><span
- style="font-family: Calibri;">, volume 94, March 2024</span><span
+ style="font-family: Calibri;">, volume 94, March 2024, 102861</span></a><span
  style="font-family: Calibri;"><span lang="EN-US"></span></span><br>
 <span style="font-family: Calibri;"><br>
 </span><span style="font-family: Calibri;">&nbsp;&nbsp;&nbsp; "<a
